--- a/main.ipynb
+++ b/main.ipynb
@@ -11,42 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "QUESTION_PATH = \"競賽資料集/dataset/preliminary/questions_example.json\"\n",
     "\n",
     "INSURANCE_PATH = \"競賽資料集/reference/insurance\"\n",
-    "FAQ_PATH = \"競賽資料集/reference/faq/pid_map_content.json\""
+    "FAQ_PATH = \"競賽資料集/reference/faq/pid_map_content.json\"\n",
+    "ANS_PATH = \"競賽資料集/dataset/preliminary/ground_truths_example.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'qid': 1,\n",
-       " 'source': [442, 115, 440, 196, 431, 392, 14, 51],\n",
-       " 'query': '匯款銀行及中間行所收取之相關費用由誰負擔?',\n",
-       " 'category': 'insurance'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = read_json(QUESTION_PATH)[\"questions\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,20 +73,16 @@
     "    # 計算相似度\n",
     "    similarities = cosine_similarity(query_embedding, document_ebeddings)\n",
     "    \n",
-    "    for i in range(len(similarities[0])):\n",
-    "        print(f\"{question_data[\"source\"][i]} : {similarities[0][i]}\")\n",
-    "\n",
-    "\n",
     "    return question_data[\"source\"][np.argmax(similarities)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "faq = read_json(FAQ_PATH)\n",
+    "\n",
     "def generate_faq_retrieve(faq: dict, id: int) -> str:\n",
     "\n",
     "    text = \"\"\n",
@@ -118,51 +101,146 @@
     "    for i in indexs:\n",
     "        all_texts.append(generate_faq_retrieve(faq, i))\n",
     "    \n",
-    "    return all_texts"
+    "    return all_texts\n",
+    "\n",
+    "\n",
+    "def validate_faq(embbeded_model, question):\n",
+    "    faq = read_json(FAQ_PATH)\n",
+    "    ans = read_json(ANS_PATH)\n",
+    "    correct = 0\n",
+    "    for i in range(100, 150):\n",
+    "        document = read_target_faq(faq, question[i][\"source\"])\n",
+    "        predict = get_ans(embbeded_model, question[i], document)\n",
+    "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
+    "            correct += 1\n",
+    "        else:\n",
+    "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
+    "    return correct / 50\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 驗證faq資料集的正確率"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69 : 0.3763333559036255\n",
-      "398 : 0.4597470164299011\n",
-      "229 : 0.3988722562789917\n",
-      "474 : 0.46297940611839294\n",
-      "382 : 0.38264065980911255\n",
-      "207 : 0.3546384871006012\n",
-      "377 : 0.32410815358161926\n",
-      "104 : 0.3161534070968628\n",
-      "32 : 0.4784950017929077\n",
-      "148 : 0.4518640637397766\n",
-      "476 : 0.25867533683776855\n",
-      "238 : 0.3116232752799988\n",
-      "441 : 0.43779969215393066\n",
-      "233 : 0.3853197693824768\n",
-      "558 : 0.8296957015991211\n"
+      "qid: 109, predict: 263, ans: 283\n",
+      "qid: 135, predict: 399, ans: 28\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "558"
+       "0.96"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "document = read_target_faq(faq, question[100][\"source\"])\n",
-    "\n",
-    "get_ans(embbeded_model, question[100], document)"
+    "validate_faq(embbeded_model, question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_insurance(embbeded_model, question):\n",
+    "    ans = read_json(ANS_PATH)\n",
+    "    correct = 0\n",
+    "    for i in range(0, 50):\n",
+    "        src = question[i][\"source\"]\n",
+    "        document = read_target_insurance_pdf(INSURANCE_PATH, src)\n",
+    "        predict = get_ans(embbeded_model, question[i], document)\n",
+    "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
+    "            correct += 1\n",
+    "        else:\n",
+    "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
+    "    return correct / 50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 驗證insurance資料集的正確率"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qid: 1, predict: 51, ans: 392\n",
+      "qid: 2, predict: 578, ans: 428\n",
+      "qid: 5, predict: 179, ans: 162\n",
+      "qid: 6, predict: 338, ans: 116\n",
+      "qid: 8, predict: 244, ans: 78\n",
+      "qid: 9, predict: 148, ans: 62\n",
+      "qid: 11, predict: 357, ans: 7\n",
+      "qid: 14, predict: 149, ans: 526\n",
+      "qid: 15, predict: 337, ans: 536\n",
+      "qid: 16, predict: 325, ans: 54\n",
+      "qid: 17, predict: 353, ans: 606\n",
+      "qid: 18, predict: 439, ans: 184\n",
+      "qid: 19, predict: 172, ans: 315\n",
+      "qid: 20, predict: 578, ans: 292\n",
+      "qid: 21, predict: 392, ans: 36\n",
+      "qid: 22, predict: 439, ans: 614\n",
+      "qid: 24, predict: 625, ans: 359\n",
+      "qid: 25, predict: 591, ans: 4\n",
+      "qid: 26, predict: 32, ans: 147\n",
+      "qid: 27, predict: 414, ans: 171\n",
+      "qid: 28, predict: 258, ans: 298\n",
+      "qid: 29, predict: 527, ans: 578\n",
+      "qid: 30, predict: 483, ans: 327\n",
+      "qid: 31, predict: 486, ans: 10\n",
+      "qid: 32, predict: 351, ans: 434\n",
+      "qid: 36, predict: 63, ans: 148\n",
+      "qid: 37, predict: 414, ans: 148\n",
+      "qid: 38, predict: 256, ans: 353\n",
+      "qid: 39, predict: 578, ans: 29\n",
+      "qid: 41, predict: 14, ans: 165\n",
+      "qid: 42, predict: 365, ans: 325\n",
+      "qid: 43, predict: 322, ans: 325\n",
+      "qid: 45, predict: 35, ans: 537\n",
+      "qid: 47, predict: 243, ans: 620\n",
+      "qid: 48, predict: 546, ans: 8\n",
+      "qid: 49, predict: 80, ans: 482\n",
+      "qid: 50, predict: 365, ans: 78\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.26"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validate_insurance(embbeded_model, question)"
    ]
   },
   {
