--- a/finance.ipynb
+++ b/finance.ipynb
@@ -18,8 +18,10 @@
     "QUESTION_PATH = \"競賽資料集/dataset/preliminary/questions_example.json\"\n",
     "\n",
     "INSURANCE_PATH = \"競賽資料集/reference/insurance\"\n",
+    "\n",
     "FAQ_PATH = \"競賽資料集/reference/faq/pid_map_content.json\"\n",
-    "ANS_PATH = \"競賽資料集/dataset/preliminary/ground_truths_example.json\""
+    "ANS_PATH = \"競賽資料集/dataset/preliminary/ground_truths_example.json\"\n",
+    "FINANCE_PATH = \"競賽資料集/reference/finance\""
    ]
   },
   {
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,30 +92,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "def validate_faq(embbeded_model, question):\n",
-    "    faq = read_json(FAQ_PATH)\n",
-    "    ans = read_json(ANS_PATH)\n",
-    "    correct = 0\n",
-    "    for i in range(100, 150):\n",
-    "        document = read_target_faq(faq, question[i][\"source\"])\n",
-    "        k_highest, _ = get_ans(embbeded_model, question[i], document)\n",
-    "        predict = question[i][\"source\"][k_highest[0]]\n",
-    "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
-    "            correct += 1\n",
-    "        else:\n",
-    "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
-    "    return correct / 50"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,16 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validate_faq(embbeded_model, question)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,35 +112,14 @@
     ")\n",
     "\n",
     "\n",
-    "def vote_answer(all_predict: np.ndarray, similarities: np.ndarray, k=3)->int:\n",
-    "    predict_similarities_total = {}\n",
-    "\n",
-    "    for i in range(min(len(all_predict), k)):\n",
-    "        if all_predict[i] in predict_similarities_total:\n",
-    "            predict_similarities_total[all_predict[i]] += similarities[i] ** 2\n",
-    "        else:\n",
-    "            predict_similarities_total[all_predict[i]] = similarities[i] ** 2\n",
-    "    \n",
-    "    max_predict = 0\n",
-    "    max_simlarity = 0\n",
-    "\n",
-    "    for predict, similarity in predict_similarities_total.items():\n",
-    "        if similarity > max_simlarity:\n",
-    "            max_predict = predict\n",
-    "            max_simlarity = similarity\n",
-    "    \n",
-    "    return max_predict\n",
-    "\n",
-    "    \n",
-    "\n",
-    "def validate_insurance(embbeded_model, question):\n",
+    "def validate_finance(embbeded_model, question):\n",
     "    ans = read_json(ANS_PATH)\n",
     "    correct = 0\n",
     "    half_correct = 0 #答案在前五\n",
     "\n",
-    "    for i in range(0, 50):\n",
+    "    for i in range(50, 100):\n",
     "        src = question[i][\"source\"]\n",
-    "        document, order_list = read_target_insurance_pdf(INSURANCE_PATH, src)\n",
+    "        document, order_list = read_target_insurance_pdf(FINANCE_PATH, src)\n",
     "        tokens = []\n",
     "        chunk_real_index = []\n",
     "        for j in range(len(document)):\n",
@@ -205,48 +153,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 驗證insurance資料集的正確率"
+    "### 驗證finance資料集的正確率"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "qid: 2, predict: 258, ans: 428\n",
-      "qid: 3, predict: 476, ans: 83\n",
-      "qid: 4, predict: 179, ans: 186\n",
-      "qid: 6, predict: 242, ans: 116\n",
-      "qid: 15, predict: 526, ans: 536\n",
-      "qid: 23, predict: 228, ans: 224\n",
-      "qid: 28, predict: 78, ans: 298\n",
-      "qid: 29, predict: 256, ans: 578\n",
-      "qid: 35, predict: 224, ans: 319\n",
-      "qid: 42, predict: 445, ans: 325\n",
-      "qid: 49, predict: 357, ans: 482\n",
-      "qid: 50, predict: 555, ans: 78\n",
-      "acc: 76.0 %\n",
-      "in rank 5: 90.0 %\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "qid: 53, predict: 145, ans: 351\n",
+      "qid: 58, predict: 112, ans: 209\n",
+      "qid: 61, predict: 870, ans: 900\n",
+      "qid: 62, predict: 1024, ans: 591\n",
+      "qid: 64, predict: 706, ans: 124\n",
+      "qid: 67, predict: 837, ans: 1021\n",
+      "qid: 69, predict: 545, ans: 981\n",
+      "qid: 70, predict: 298, ans: 490\n",
+      "qid: 75, predict: 736, ans: 71\n",
+      "qid: 79, predict: 912, ans: 65\n",
+      "qid: 82, predict: 838, ans: 831\n",
+      "qid: 86, predict: 525, ans: 189\n",
+      "qid: 90, predict: 761, ans: 710\n",
+      "qid: 93, predict: 321, ans: 660\n",
+      "qid: 99, predict: 693, ans: 372\n",
+      "acc: 70.0 %\n",
+      "in rank 5: 96.0 %\n"
      ]
     }
    ],
    "source": [
-    "validate_insurance(embbeded_model, question)"
+    "validate_finance(embbeded_model, question)"
    ]
   },
   {
