Save wrong query in txt 1. change read pdf

--- a/finance.ipynb
+++ b/finance.ipynb
@@ -142,6 +142,20 @@
     "            correct += 1\n",
     "        else:\n",
     "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
+    "            chunks_text = f\"qid: {i + 1}, ans:{ans[\"ground_truths\"][i][\"retrieve\"]}\\n\\n\\n\"\n",
+    "\n",
+    "            for j in range(len(token_index)):\n",
+    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[j]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
+    "\n",
+    "            chunks_text += f\"正確答案{ans[\"ground_truths\"][i][\"retrieve\"]}的token\\n\"\n",
+    "            for j in range(len(tokens)):\n",
+    "                \n",
+    "                if order_list[chunk_real_index[j]] == ans[\"ground_truths\"][i][\"retrieve\"]:\n",
+    "                    chunks_text += f\"token:{j + 1}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
+    "\n",
+    "\n",
+    "            with open(f\"output_finance/qid_{i + 1}.txt\", 'w', encoding='utf-8') as file:\n",
+    "                file.write(chunks_text)\n",
     "        if (ans[\"ground_truths\"][i][\"retrieve\"] in all_predict):\n",
     "            half_correct += 1\n",
     "\n",
@@ -180,20 +194,15 @@
       "qid: 64, predict: 706, ans: 124\n",
       "qid: 67, predict: 837, ans: 1021\n",
       "qid: 69, predict: 545, ans: 981\n",
-      "qid: 70, predict: 298, ans: 490\n",
-      "qid: 75, predict: 736, ans: 71\n",
-      "qid: 79, predict: 912, ans: 65\n",
-      "qid: 82, predict: 838, ans: 831\n",
-      "qid: 86, predict: 525, ans: 189\n",
-      "qid: 90, predict: 761, ans: 710\n",
-      "qid: 93, predict: 321, ans: 660\n",
-      "qid: 99, predict: 693, ans: 372\n",
-      "acc: 70.0 %\n",
-      "in rank 5: 96.0 %\n"
+      "qid: 70, predict: 298, ans: 490\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
+    "if not os.path.exists(\"output_finance/\"):\n",
+    "    os.makedirs(\"output_finance/\")\n",
     "validate_finance(embbeded_model, question)"
    ]
   },
