--- a/main.ipynb
+++ b/main.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,34 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qid: 109, predict: 234, ans: 283\n",
+      "qid: 135, predict: 399, ans: 28\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.96"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "validate_faq(embbeded_model, question)"
    ]
@@ -181,10 +208,10 @@
     "            chunk_real_index.extend([j + k * 0 for k in range(len(chunks))])\n",
     "\n",
     "                \n",
-    "        chunk_real_index=np.array(chunk_real_index)\n",
+    "        chunk_real_index = np.array(chunk_real_index)\n",
     "\n",
-    "\n",
-    "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, 5)\n",
+    "        k = 10\n",
+    "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, k)\n",
     "        real_index = chunk_real_index[token_index]\n",
     "        all_predict = order_list[real_index]\n",
     "        predict = all_predict[0]\n",
@@ -194,6 +221,22 @@
     "            correct += 1\n",
     "        else:\n",
     "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
+    "            chunks_text = f\"qid: {i + 1}, ans:{ans[\"ground_truths\"][i][\"retrieve\"]}\\n\\n\\n\"\n",
+    "\n",
+    "            for j in range(len(token_index)):\n",
+    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[j]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
+    "\n",
+    "            chunks_text += f\"正確答案{ans[\"ground_truths\"][i][\"retrieve\"]}的token\\n\"\n",
+    "            for j in range(len(tokens)):\n",
+    "                \n",
+    "                if order_list[chunk_real_index[j]] == ans[\"ground_truths\"][i][\"retrieve\"]:\n",
+    "                    chunks_text += f\"token:{j + 1}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
+    "\n",
+    "\n",
+    "            with open(f\"output_insurance/qid_{i + 1}.txt\", 'w', encoding='utf-8') as file:\n",
+    "                file.write(chunks_text)\n",
+    "\n",
+    "\n",
     "        if (ans[\"ground_truths\"][i][\"retrieve\"] in all_predict):\n",
     "            half_correct += 1\n",
     "\n",
@@ -230,22 +273,16 @@
       "qid: 49, predict: 357, ans: 482\n",
       "qid: 50, predict: 555, ans: 78\n",
       "acc: 76.0 %\n",
-      "in rank 5: 90.0 %\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "in rank 5: 92.0 %\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
+    "if not os.path.exists(\"output_insurance/\"):\n",
+    "    os.makedirs(\"output_insurance/\")\n",
+    "\n",
     "validate_insurance(embbeded_model, question)"
    ]
   },
