Show smilarity of token

--- a/finance.ipynb
+++ b/finance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,18 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\weiso131\\anaconda3\\envs\\rag\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from tqdm.autonotebook import tqdm, trange\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +79,7 @@
     "    # 計算相似度\n",
     "    similarities = cosine_similarity(query_embedding, document_ebeddings)\n",
     "    k_highest = np.argsort(similarities[0])[-k:][::-1]\n",
-    "    return k_highest, np.sort(similarities[0])[::-1][:k]"
+    "    return k_highest, similarities[0]"
    ]
   },
   {
@@ -100,15 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=800,  # 每段的目標長度\n",
-    "    chunk_overlap=400  # 分段間的重疊字符數\n",
+    "    chunk_size=500,  # 每段的目標長度\n",
+    "    chunk_overlap=300  # 分段間的重疊字符數\n",
     ")\n",
     "\n",
     "\n",
@@ -132,7 +123,7 @@
     "        chunk_real_index=np.array(chunk_real_index)\n",
     "\n",
     "\n",
-    "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, 5)\n",
+    "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, 10)\n",
     "        real_index = chunk_real_index[token_index]\n",
     "        all_predict = order_list[real_index]\n",
     "        predict = all_predict[0]\n",
@@ -145,13 +136,14 @@
     "            chunks_text = f\"qid: {i + 1}, ans:{ans[\"ground_truths\"][i][\"retrieve\"]}\\n\\n\\n\"\n",
     "\n",
     "            for j in range(len(token_index)):\n",
-    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[j]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
+    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[token_index[j]]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
     "\n",
     "            chunks_text += f\"正確答案{ans[\"ground_truths\"][i][\"retrieve\"]}的token\\n\"\n",
     "            for j in range(len(tokens)):\n",
     "                \n",
     "                if order_list[chunk_real_index[j]] == ans[\"ground_truths\"][i][\"retrieve\"]:\n",
-    "                    chunks_text += f\"token:{j + 1}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
+    "                    chunks_text += f\"token:{j + 1}, similarity: {similarities[j]}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
+    "\n",
     "\n",
     "\n",
     "            with open(f\"output_finance/qid_{i + 1}.txt\", 'w', encoding='utf-8') as file:\n",
@@ -172,32 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "qid: 53, predict: 145, ans: 351\n",
-      "qid: 58, predict: 112, ans: 209\n",
-      "qid: 61, predict: 870, ans: 900\n",
-      "qid: 62, predict: 1024, ans: 591\n",
-      "qid: 64, predict: 706, ans: 124\n",
-      "qid: 67, predict: 837, ans: 1021\n",
-      "qid: 69, predict: 545, ans: 981\n",
-      "qid: 70, predict: 298, ans: 490\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
