--- a/main.ipynb
+++ b/main.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "    # 計算相似度\n",
     "    similarities = cosine_similarity(query_embedding, document_ebeddings)\n",
     "    k_highest = np.argsort(similarities[0])[-k:][::-1]\n",
-    "    return k_highest, np.sort(similarities[0])[::-1][:k]"
+    "    return k_highest, similarities[0]"
    ]
   },
   {
@@ -124,49 +124,22 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "qid: 109, predict: 234, ans: 283\n",
-      "qid: 135, predict: 399, ans: 28\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.96"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "validate_faq(embbeded_model, question)"
+    "#validate_faq(embbeded_model, question)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=800,  # 每段的目標長度\n",
-    "    chunk_overlap=400  # 分段間的重疊字符數\n",
+    "    chunk_size=400,  # 每段的目標長度\n",
+    "    chunk_overlap=300  # 分段間的重疊字符數\n",
     ")\n",
     "\n",
     "\n",
@@ -224,13 +197,13 @@
     "            chunks_text = f\"qid: {i + 1}, ans:{ans[\"ground_truths\"][i][\"retrieve\"]}\\n\\n\\n\"\n",
     "\n",
     "            for j in range(len(token_index)):\n",
-    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[j]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
+    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[token_index[j]]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
     "\n",
     "            chunks_text += f\"正確答案{ans[\"ground_truths\"][i][\"retrieve\"]}的token\\n\"\n",
     "            for j in range(len(tokens)):\n",
     "                \n",
     "                if order_list[chunk_real_index[j]] == ans[\"ground_truths\"][i][\"retrieve\"]:\n",
-    "                    chunks_text += f\"token:{j + 1}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
+    "                    chunks_text += f\"token:{j + 1}, similarity: {similarities[j]}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
     "\n",
     "\n",
     "            with open(f\"output_insurance/qid_{i + 1}.txt\", 'w', encoding='utf-8') as file:\n",
@@ -253,27 +226,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "qid: 2, predict: 258, ans: 428\n",
-      "qid: 3, predict: 476, ans: 83\n",
-      "qid: 4, predict: 179, ans: 186\n",
-      "qid: 6, predict: 242, ans: 116\n",
-      "qid: 15, predict: 526, ans: 536\n",
-      "qid: 23, predict: 228, ans: 224\n",
-      "qid: 28, predict: 78, ans: 298\n",
-      "qid: 29, predict: 256, ans: 578\n",
-      "qid: 35, predict: 224, ans: 319\n",
-      "qid: 42, predict: 445, ans: 325\n",
-      "qid: 49, predict: 357, ans: 482\n",
       "qid: 50, predict: 555, ans: 78\n",
-      "acc: 76.0 %\n",
-      "in rank 5: 92.0 %\n"
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "528\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "341\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "365\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "524\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "555\n",
+      "acc: 0.0 %\n",
+      "in rank 5: 0.0 %\n"
      ]
     }
    ],
