--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.read_file import *"
+    "from utils.read_file import *\n",
+    "from utils.split_law import split_law_to_token"
    ]
   },
   {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,21 +127,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#validate_faq(embbeded_model, question)"
+    "validate_faq(embbeded_model, question)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
-    "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=400,  # 每段的目標長度\n",
-    "    chunk_overlap=300  # 分段間的重疊字符數\n",
-    ")\n",
     "\n",
     "\n",
     "def vote_answer(all_predict: np.ndarray, similarities: np.ndarray, k=3)->int:\n",
@@ -176,7 +172,7 @@
     "        chunk_real_index = []\n",
     "        for j in range(len(document)):\n",
     "            text = document[j]\n",
-    "            chunks = text_splitter.split_text(text)\n",
+    "            chunks = split_law_to_token(text)\n",
     "            tokens.extend(chunks)\n",
     "            chunk_real_index.extend([j + k * 0 for k in range(len(chunks))])\n",
     "\n",
@@ -226,69 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "qid: 2, predict: 258, ans: 428\n",
+      "qid: 4, predict: 179, ans: 186\n",
       "qid: 50, predict: 555, ans: 78\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "528\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "341\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "365\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "524\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "555\n",
-      "acc: 0.0 %\n",
-      "in rank 5: 0.0 %\n"
+      "acc: 94.0 %\n",
+      "in rank 5: 96.0 %\n"
      ]
     }
    ],
