Code, Speed optimize

--- a/finance.ipynb
+++ b/finance.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.read_file import *"
+    "from utils.read_file import *\n",
+    "from utils.model_tool import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,38 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\weiso131\\anaconda3\\envs\\rag\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "# 加載模型\n",
     "embbeded_model = SentenceTransformer(\"./models/bge-m3\", device='cuda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import numpy as np\n",
-    "\n",
-    "def get_ans(embedded_model, question_data: dict, documents: list, k=1):\n",
-    "    document_ebeddings = embedded_model.encode(documents)\n",
-    "\n",
-    "    # 使用者查詢\n",
-    "    user_query = question_data[\"query\"]\n",
-    "\n",
-    "    # 查詢文本轉換成嵌入向量\n",
-    "    query_embedding = embbeded_model.encode([user_query])\n",
-    "\n",
-    "    # 計算相似度\n",
-    "    similarities = cosine_similarity(query_embedding, document_ebeddings)\n",
-    "    k_highest = np.argsort(similarities[0])[-k:][::-1]\n",
-    "    return k_highest, similarities[0]"
    ]
   },
   {
@@ -91,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,19 +88,26 @@
     "    chunk_overlap=300  # 分段間的重疊字符數\n",
     ")\n",
     "\n",
+    "FILE_NUM = 2000\n",
     "\n",
     "def validate_finance(embbeded_model, question):\n",
     "    ans = read_json(ANS_PATH)\n",
     "    correct = 0\n",
     "    half_correct = 0 #答案在前五\n",
     "\n",
+    "    already_read = [\"\" for _ in range(FILE_NUM)]\n",
+    "\n",
     "    for i in range(50, 100):\n",
-    "        src = question[i][\"source\"]\n",
-    "        document, order_list = read_target_insurance_pdf(FINANCE_PATH, src)\n",
+    "        src = np.array(question[i][\"source\"])\n",
+    "        document = read_target_insurance_pdf(FINANCE_PATH, src, already_read)\n",
     "        tokens = []\n",
     "        chunk_real_index = []\n",
     "        for j in range(len(document)):\n",
     "            text = document[j]\n",
+    "\n",
+    "            if already_read[src[j]] == \"\":\n",
+    "                already_read[src[j]] = text\n",
+    "\n",
     "            chunks = text_splitter.split_text(text)\n",
     "            tokens.extend(chunks)\n",
     "            chunk_real_index.extend([j + k * 0 for k in range(len(chunks))])\n",
@@ -125,29 +118,16 @@
     "\n",
     "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, 10)\n",
     "        real_index = chunk_real_index[token_index]\n",
-    "        all_predict = order_list[real_index]\n",
+    "        all_predict = src[real_index]\n",
     "        predict = all_predict[0]\n",
     "\n",
     "\n",
     "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
     "            correct += 1\n",
     "        else:\n",
-    "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
-    "            chunks_text = f\"qid: {i + 1}, ans:{ans[\"ground_truths\"][i][\"retrieve\"]}\\n\\n\\n\"\n",
+    "            show_wrong_ans(i, predict, ans, token_index, \\\n",
+    "                   src, real_index, similarities, chunk_real_index, tokens, \"output_finance\")\n",
     "\n",
-    "            for j in range(len(token_index)):\n",
-    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[token_index[j]]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
-    "\n",
-    "            chunks_text += f\"正確答案{ans[\"ground_truths\"][i][\"retrieve\"]}的token\\n\"\n",
-    "            for j in range(len(tokens)):\n",
-    "                \n",
-    "                if order_list[chunk_real_index[j]] == ans[\"ground_truths\"][i][\"retrieve\"]:\n",
-    "                    chunks_text += f\"token:{j + 1}, similarity: {similarities[j]}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "            with open(f\"output_finance/qid_{i + 1}.txt\", 'w', encoding='utf-8') as file:\n",
-    "                file.write(chunks_text)\n",
     "        if (ans[\"ground_truths\"][i][\"retrieve\"] in all_predict):\n",
     "            half_correct += 1\n",
     "\n",
@@ -164,9 +144,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qid: 58, predict: 112, ans: 209\n",
+      "qid: 62, predict: 1024, ans: 591\n",
+      "qid: 64, predict: 706, ans: 124\n",
+      "qid: 67, predict: 837, ans: 1021\n",
+      "qid: 69, predict: 545, ans: 981\n",
+      "qid: 70, predict: 298, ans: 490\n",
+      "qid: 75, predict: 178, ans: 71\n",
+      "qid: 79, predict: 912, ans: 65\n",
+      "qid: 82, predict: 838, ans: 831\n",
+      "qid: 86, predict: 525, ans: 189\n",
+      "qid: 90, predict: 761, ans: 710\n",
+      "qid: 93, predict: 321, ans: 660\n",
+      "qid: 99, predict: 693, ans: 372\n",
+      "acc: 74.0 %\n",
+      "in rank 5: 98.0 %\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
