--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from utils.read_file import *\n",
-    "from utils.split_law import split_law_to_token"
+    "from utils.split_law import split_law_to_token\n",
+    "from utils.model_tool import *"
    ]
   },
   {
@@ -72,33 +73,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import numpy as np\n",
-    "\n",
-    "def get_ans(embedded_model, question_data: dict, documents: list, k=1):\n",
-    "    document_ebeddings = embedded_model.encode(documents)\n",
-    "\n",
-    "    # 使用者查詢\n",
-    "    user_query = question_data[\"query\"]\n",
-    "\n",
-    "    # 查詢文本轉換成嵌入向量\n",
-    "    query_embedding = embbeded_model.encode([user_query])\n",
-    "\n",
-    "    # 計算相似度\n",
-    "    similarities = cosine_similarity(query_embedding, document_ebeddings)\n",
-    "    k_highest = np.argsort(similarities[0])[-k:][::-1]\n",
-    "    return k_highest, similarities[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
     "def validate_faq(embbeded_model, question):\n",
     "    faq = read_json(FAQ_PATH)\n",
     "    ans = read_json(ANS_PATH)\n",
@@ -123,55 +97,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "validate_faq(embbeded_model, question)"
+    "#validate_faq(embbeded_model, question)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "def vote_answer(all_predict: np.ndarray, similarities: np.ndarray, k=3)->int:\n",
-    "    predict_similarities_total = {}\n",
-    "\n",
-    "    for i in range(min(len(all_predict), k)):\n",
-    "        if all_predict[i] in predict_similarities_total:\n",
-    "            predict_similarities_total[all_predict[i]] += similarities[i] ** 2\n",
-    "        else:\n",
-    "            predict_similarities_total[all_predict[i]] = similarities[i] ** 2\n",
-    "    \n",
-    "    max_predict = 0\n",
-    "    max_simlarity = 0\n",
-    "\n",
-    "    for predict, similarity in predict_similarities_total.items():\n",
-    "        if similarity > max_simlarity:\n",
-    "            max_predict = predict\n",
-    "            max_simlarity = similarity\n",
-    "    \n",
-    "    return max_predict\n",
-    "\n",
-    "    \n",
+    "FILE_NUM = 2000\n",
     "\n",
     "def validate_insurance(embbeded_model, question):\n",
     "    ans = read_json(ANS_PATH)\n",
     "    correct = 0\n",
     "    half_correct = 0 #答案在前五\n",
     "\n",
+    "    already_read = [\"\" for _ in range(FILE_NUM)]\n",
+    "\n",
+    "\n",
     "    for i in range(0, 50):\n",
-    "        src = question[i][\"source\"]\n",
-    "        document, order_list = read_target_insurance_pdf(INSURANCE_PATH, src)\n",
+    "        src = np.array(question[i][\"source\"])\n",
+    "        document = read_target_insurance_pdf(INSURANCE_PATH, src, already_read)\n",
     "        tokens = []\n",
     "        chunk_real_index = []\n",
     "        for j in range(len(document)):\n",
     "            text = document[j]\n",
+    "\n",
+    "            if already_read[src[j]] == \"\":\n",
+    "                already_read[src[j]] = text\n",
+    "\n",
     "            chunks = split_law_to_token(text)\n",
     "            tokens.extend(chunks)\n",
     "            chunk_real_index.extend([j + k * 0 for k in range(len(chunks))])\n",
@@ -182,28 +141,15 @@
     "        k = 10\n",
     "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, k)\n",
     "        real_index = chunk_real_index[token_index]\n",
-    "        all_predict = order_list[real_index]\n",
+    "        all_predict = src[real_index]\n",
     "        predict = all_predict[0]\n",
     "\n",
     "\n",
     "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
     "            correct += 1\n",
     "        else:\n",
-    "            print(f\"qid: {i + 1}, predict: {predict}, ans: {ans[\"ground_truths\"][i][\"retrieve\"]}\")\n",
-    "            chunks_text = f\"qid: {i + 1}, ans:{ans[\"ground_truths\"][i][\"retrieve\"]}\\n\\n\\n\"\n",
-    "\n",
-    "            for j in range(len(token_index)):\n",
-    "                chunks_text += f\"index: {order_list[real_index[j]]}, similarity: {similarities[token_index[j]]}\\n\\n{tokens[token_index[j]]}\\n\\n\\n\"\n",
-    "\n",
-    "            chunks_text += f\"正確答案{ans[\"ground_truths\"][i][\"retrieve\"]}的token\\n\"\n",
-    "            for j in range(len(tokens)):\n",
-    "                \n",
-    "                if order_list[chunk_real_index[j]] == ans[\"ground_truths\"][i][\"retrieve\"]:\n",
-    "                    chunks_text += f\"token:{j + 1}, similarity: {similarities[j]}\\n\\n{tokens[j]}\\n\\n\\n\"\n",
-    "\n",
-    "\n",
-    "            with open(f\"output_insurance/qid_{i + 1}.txt\", 'w', encoding='utf-8') as file:\n",
-    "                file.write(chunks_text)\n",
+    "            show_wrong_ans(i, predict, ans, token_index, \\\n",
+    "                   src, real_index, similarities, chunk_real_index, tokens, \"output_insurance\")\n",
     "\n",
     "\n",
     "        if (ans[\"ground_truths\"][i][\"retrieve\"] in all_predict):\n",
@@ -222,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
